<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/recycle_search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="@string/recycle1_1_name" />

        <Button
            android:id="@+id/recycle_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#CCCBCB"
            android:text="@string/camera"
            android:textColor="@color/black" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:id="@+id/category1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/paper"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/paper"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/recycle_paper"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/paper2"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/paper2"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/recycle_paper2"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/category2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/glass"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:text="@string/glass"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/recycle_glass"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/plastic"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:text="@string/pet_plastic"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/recycle_pet"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/category3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/can"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:text="@string/can"
                android:textSize="13sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/recycle_can"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id="@+id/vinyl"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/recycle_vinyl"
                android:text="@string/vinyl"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
